kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
# MongoDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singiattend-mongo
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: singiattend-mongo
  template:
    metadata:
      labels:
        app: singiattend-mongo
    spec:
      containers:
        - name: singiattend-mongo
          image: markodojkic.local:5001/singiattend-mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-storage
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "4Gi"
              cpu: "4"
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: nexus-credentials
---
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: singiattend-mongo
  namespace: nexus
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: singiattend-mongo
  type: ClusterIP
---
# FE Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singiattend-fe
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: singiattend-fe
  template:
    metadata:
      labels:
        app: singiattend-fe
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: singiattend-appstack
          image: markodojkic.local:5001/singiattend-appstack:latest
          ports:
            - containerPort: 443
              name: fe
          readinessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "1"
              ephemeral-storage: "1Gi"
        - name: php-metrics
          image: markodojkic.local:5001/php-metrics:latest
          ports:
            - containerPort: 9113
              name: metrics
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "1"
              ephemeral-storage: "1Gi"
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: nexus-credentials
---
# FE Service
apiVersion: v1
kind: Service
metadata:
  name: singiattend-fe
  namespace: nexus
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: singiattend-fe
  type: ClusterIP
---
# BE Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singiattend-be
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: singiattend-be
  template:
    metadata:
      labels:
        app: singiattend-be
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "62811"
        prometheus.io/path: "/actuator/health/prometheus"
    spec:
      containers:
        - name: singiattend-server
          image: markodojkic.local:5001/singiattend-server:latest
          ports:
            - containerPort: 62811
              name: be
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health/readiness
              port: 62811
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health/liveness
              port: 62811
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
              ephemeral-storage: "1Gi"
            limits:
              memory: "4Gi"
              cpu: "4"
              ephemeral-storage: "4Gi"
      serviceAccountName: singiattend-sa
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: nexus-credentials
---
# BE Service
apiVersion: v1
kind: Service
metadata:
  name: singiattend-server
  namespace: nexus
spec:
  ports:
    - port: 62811
      targetPort: 62811
  selector:
    app: singiattend-be
  type: ClusterIP
---
# Student Proxy Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singiattend-sp
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: singiattend-sp
  template:
    metadata:
      labels:
        app: singiattend-sp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "62814"
        prometheus.io/path: "/actuator/health/prometheus"
    spec:
      containers:
        - name: singiattend-student-proxy
          image: markodojkic.local:5001/singiattend-student-proxy:latest
          ports:
            - containerPort: 62814
              name: sp
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health/readiness
              port: 62814
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health/liveness
              port: 62814
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
              ephemeral-storage: "1Gi"
            limits:
              memory: "4Gi"
              cpu: "4"
              ephemeral-storage: "4Gi"
      serviceAccountName: singiattend-sa
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: nexus-credentials
---
# Student Proxy Service
apiVersion: v1
kind: Service
metadata:
  name: singiattend-sp
  namespace: nexus
spec:
  ports:
    - port: 62814
      targetPort: 62814
  selector:
    app: singiattend-sp
  type: ClusterIP
---
#Ingress for teacher and student
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: singiattend
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - singiattend.k8s.markodojkic.local
      secretName: ingress-k8s-tls
  rules:
    - host: singiattend.k8s.markodojkic.local
      http:
        paths:
          - path: /teacher
            pathType: Prefix
            backend:
              service:
                name: singiattend-fe
                port:
                  number: 443

          - path: /student
            pathType: Prefix
            backend:
              service:
                name: singiattend-sp
                port:
                  number: 62814
